--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2001-06-28  Tim Van Holder  <tim.van.holder@pandora.be>, Gary V. Vaughan  <gary@gnu.org>
+
+	* bootstrap: Use cp instead of ln -s, for systems without
+	symlinks.  Reorder the statements to avoid repetition outside
+	the loop.
+
 2001-06-28  Paolo Bonzini  <bonzini@gnu.org>, Gary V. Vaughan  <gary@gnu.org>
 
 	Libtool now builds with the help of Autoconf-2.50!
