From  Alexander Bluhm  <Alexander.Bluhm@WiredMinds.de> * libltdl/ltdl.c (lt_dlopen): Fix bad memory initialisation assumptions.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2001-06-28  Gary V. Vaughan  <gary@gnu.org>
 
+	From  Alexander Bluhm  <Alexander.Bluhm@WiredMinds.de>
+	* libltdl/ltdl.c (lt_dlopen): Fix bad memory initialisation
+	assumptions.
+
 	* libtool.m4 (AC_LIBTOOL_SYS_GLOBAL_SYMBOL_PIPE) [HPUX]: Define
 	lt_cv_sys_global_symbol_to_c_name_address to be a sed expression
 	for mangling the output of the symbol pipe into a brace delimited
