--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2001-06-28  Gary V. Vaughan  <gary@gnu.org>
+
+	From  Alexander Bluhm  <Alexander.Bluhm@WiredMinds.de>
+	* libltdl/ltdl.c (lt_dlopen): Fix bad memory initialisation
+	assumptions.
+
 2001-06-27  Gary V. Vaughan  <gary@gnu.org>
 
 	From brad@openbsd.org:
