--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2001-06-29  Gary V. Vaughan  <gary@gnu.org>
 
+	From "Golubev I. N." <gin@mo.msk.ru>
+	* libtool.m4 (AC_LIBTOOL_PROG_LD_SHLIBS) [sco3.2v5*]: Needs
+	-wl,-Bexport to make self dlopen work.
+
 	From Chris Leishman <chris@sharinga.com>
 	* libtool,m4 (_LT_AC_LTCONFIG_HACK) [darwin]:  Cheap hack to
 	help fake a C++ compilation.
