--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2001-06-29  Gary V. Vaughan  <gary@gnu.org>
+
+	From "Golubev I. N." <gin@mo.msk.ru>
+	* libtool.m4 (AC_LIBTOOL_PROG_LD_SHLIBS) [sco3.2v5*]: Needs
+	-wl,-Bexport to make self dlopen work.
+
 2001-06-28  Gary V. Vaughan  <gary@gnu.org>
 
 	From  Alexander Bluhm  <Alexander.Bluhm@WiredMinds.de>
