--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,8 @@
 2001-06-29  Gary V. Vaughan  <gary@gnu.org>
 
+	From "Golubev I. N." <gin@mo.msk.ru>
+	* tests/Makefile.am (CPPLAGS): Typo. s/CPPLAGS/CPPFLAGS.
+
 	* mdemo/Makefile,am (foo1_la_LIBADD): Add libsub.la, since foo1
 	does use symbols from libsub.la -- only platforms that allow
 	undefined symbols in libraries were able to cope with this
