--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2001-06-30  Gary V. Vaughan  <gary@gnu.org>
 
+	* libtool.m4 (AC_LIBTOOL_PROG_COMPILER_PIC) [aix*]: Always set
+	lt_prog_compiler_wl to `-Wl'.
+	Reported by Albert Chin-A-Young  <china@thewrittenword.com>
+
 	* ltdl.m4 (AC_LTDL_DLLIB) [sco3.2*]: When searching for a dlopen
 	implementation, and adding `-ldl' has failed, try linking a call
 	to dlopen, #including dlfcn.h, and without -ldl.  On sco3.2 the
