--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2001-07-02  Gary V. Vaughan  <gary@gnu.org>
+
+	* libtoolize.in:  Display --version in the same format as
+	autoconf and automake.
+	* ltmain.in: Ditto.
+
 2001-06-30  Gary V. Vaughan  <gary@gnu.org>
 
 	Merge test improvements from multi-language-branch:
