--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2001-07-09  Timothy Wall  <twall@oculustech.com>
+
+	* libtool.m4 (AC_LIBTOOL_PROG_LD_SHLIBS): Don't disable shlibs
+	on AIX5/IA64 with GNU ld.  Keep gnu defaults if using gnu tools
+	on AIX5/IA64.
+
 2001-07-09  Robert Boehne  <rboehne@ricardo-us.com>
 
 	* libtool.m4 (AC_LIBTOOL_SYS_MAX_CMD_LEN):  Set max_cmd_len
