--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2001-07-09  Robert Boehne  <rboehne@ricardo-us.com>
+
+	From Michael Elizabeth Chastain <chastain@cygnus.com>:
+	* libtool.m4 (AC_LIBTOOL_SYS_MAX_CMD_LEN):  Set max_cmd_len
+	to a maximum of 512Kb, as it seems some HPUX 11.0 systems
+	have trouble with 1MB.
+
 2001-07-09  Gary V. Vaughan  <gary@gnu.org>
 
 	* README-alpha:  Upgrade distribution instructions to include
