--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2001-07-11  Gary V. Vaughan  <gary@gnu.org>
+
+	* libtool.m4 (_LT_AC_LANG_CXX_CONFIG) [hpux, linux, osf,
+	solaris]: output_verbose_link_cmd have unquoted `*' in case
+	statements for these architectures.  Be sure to quote them
+	with a sed expression before passing to eval.
+	Reported by Tim Mooney <mooney@dogbert.cc.ndsu.NoDak.edu>
+
 2001-07-09  Gary V. Vaughan  <gary@gnu.org>
 
 	* README-alpha:  s/configure.in/configure.ac.
