From albert chin <china@thewrittenword.com> * ltmain.in: Fix a case where the lockfile is not removed, thus causing libtool to loop forever waiting for it to be removed.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2001-07-12  Dan McNichol  <mcnichol@austin.ibm.com>
+
+	From albert chin <china@thewrittenword.com>
+	* ltmain.in: Fix a case where the lockfile is not removed, thus
+	causing libtool to loop forever waiting for it to be removed.
+
 2001-07-05  Gary V. Vaughan  <gary@gnu.org>
 
 	* libtool.m4 (_LT_AC_LTCONFIG_HACK):  Revert to 1.3.x
