--- a/NEWS
+++ b/NEWS
@@ -3,6 +3,7 @@ NEWS - list of user-visible changes between releases of GNU Libtool
 New in 1.4d: 2001-??-??; CVS version 1.4c, Libtool team:
 * Support /lib/w32api in recent cygwin releases.
 * Improved support for linking with gcc on aix4* and aix5*.
+* Initial support for QNX RTOS.
 * Bug fixes.
 
 New in 1.4b: 2001-07-09; CVS version 1.4a, Libtool team:
