--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,8 @@
 2001-07-23  Gary V. Vaughan  <gary@gnu.org>
 
+	* Makefile.am (EXTRA_DIST): Don't forget to distribute
+	ChangeLog.1.
+
 	From Erik Lindahl <E.Lindahl@chem.rug.nl>
 	* libtool.m4 (_LT_AC_SYS_LIBPATH_AIX): Used on aix to discover
 	the compiler's default library search path so that the MPI
