--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2001-07-25  Gary V. Vaughan  <gary@gnu.org>
+
+	From Steve Ellcey <sje@cup.hp.com>:
+	* libltdl/ltdl.c (foreach_dirinpath): Free unassigned pointer
+	fix for `canonical'.
+
 2001-07-23  Robert Boehne  <rboehne@ricardo-us.com>
 
 	* libtool.m4 (AC_LIBTOOL_LANG_CXX_CONFIG, AC_LIBTOOL_PROG_LD_SHLIBS)
