--- a/NEWS
+++ b/NEWS
@@ -2,6 +2,7 @@ NEWS - list of user-visible changes between releases of GNU Libtool
 
 New in 1.4d: 2001-??-??; CVS version 1.4c, Libtool team:
 * Support /lib/w32api in recent cygwin releases.
+* Support cross compilation to mingw.
 * Improved support for linking with gcc on aix4* and aix5*.
 * Initial support for QNX RTOS.
 * Bug fixes.
