* libtool.m4 (lt_cv_sys_global_symbol_to_cdecl):  Change it from "extern char" to "extern int" so that GCC 3.0 won't complain and refuse to compile programs containing "extern char main()".

--- a/NEWS
+++ b/NEWS
@@ -4,6 +4,7 @@ New in 1.4d: 2001-??-??; CVS version 1.4c, Libtool team:
 * Support /lib/w32api in recent cygwin releases.
 * Support cross compilation to mingw.
 * Improved support for linking with gcc on aix4* and aix5*.
+* Improved support for GCC 3.0.
 * Initial support for QNX RTOS.
 * Bug fixes.
 
