--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2001-07-29  Steve Ellcey  <sje@cup.hp.com>
+
+	* libtool.m4 (lt_cv_sys_global_symbol_to_cdecl):  Change it from
+	"extern char" to "extern int" so that GCC 3.0 won't complain and
+	refuse to compile programs containing "extern char main()".
+
 2001-07-29  Gary V. Vaughan  <gary@gnu.org>
 
 	From Guido Draheim <Guido.Draheim@tek.com>:	
