--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2001-07-29  Andrew C. Feren  <aferen@CetaceanNetworks.com>
+
+	* tests/sh.test:  New test to disallow `test $foo', where
+	`test "$foo"' is much safer.
+	* ltmain.in: Fix quoting problems uncovered by the new test.
+
 2001-07-29  Steve Ellcey  <sje@cup.hp.com>
 
 	* libtool.m4 (lt_cv_sys_global_symbol_to_cdecl):  Change it from
