--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2001-07-29  Gary V. Vaughan  <gary@gnu.org>
+
+	* tests/sh.test: Add a new test to enforce X as the fill
+	character in `test "X...'.
+	Beef up the `test' tests to also check `test -.' and `test ! -.'
+	phrases for compliance.
+	* ltmain.in: Fix quoting problems uncovered by the new tests.
+
 2001-07-29  Andrew C. Feren  <aferen@CetaceanNetworks.com>
 
 	* tests/sh.test:  New test to disallow `test $foo', where
