--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2001-07-31  Robert Boehne  <rboehne@ricardo-us.com>
+
+	* libtool.m4 (mingw*) Revert the previous change as it was
+	applied by mistake.
+
 2001-07-31  Guido Draheim  <guidod-2001q3@gmx.de>
 
 	* libtool.m4 (mingw*) sys_lib_search_path_spec:
