--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2001-08-01  Ossama Othman  <ossama@doc.ece.uci.edu>
+
+	* libtool.m4 (AC_LIBTOOL_SETUP): Require Autoconf-2.50 via the
+	AC_PREREQ autoconf macro since the new libtool macros utilize
+	macros from that version of Autoconf.
+
 2001-08-01  Gary V. Vaughan  <gary@gnu.org>
 
 	* ltdl.m4: Bump serial number.
