--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2001-08-03  Gary V. Vaughan  <gary@gnu.org>
+
+	* bootstrap:  s/ltdldemo // -- This demo soesn't work properly,
+	so I haven't committed it yet.
+
 2001-08-01  Ossama Othman  <ossama@doc.ece.uci.edu>
 
 	* libtool.m4 (AC_LIBTOOL_SETUP): Require Autoconf-2.50 via the
