--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2001-08-04  Gary V. Vaughan  <gary@gnu.org>
+
+	From Edouard G. Parmelan <egp@free.fr>
+	* libtool.m4 [darwin, openbsd]: Fix quoting problems with
+	unquoted [] expressions.
+
 2001-07-29  Albert Chin-A-Young  <china@thewrittenword.com>
 
 	* libtool.m4: Prefer shl_load to dlopen	on HP-UX because
