--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2001-08-04  Gary V. Vaughan  <gary@gnu.org>
 
+	From Sedi Master Albert Chin <china@thewrittenword.com>:
+	* libtool.m4 (_LT_AC_SYS_LIBPATH_AIX): Replace the awk invocation
+	with an equivalent bit of sed wizardry.
+
 	From Edouard G. Parmelan <egp@free.fr>
 	* libtool.m4 [darwin, openbsd]: Fix quoting problems with
 	unquoted [] expressions.
