--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2001-08-05  Albert Chin-A-Young <china@thewrittenword.com>
+
+	* libtool.m4 (_LT_AC_SYS_LIBPATH_AIX): Add newline after
+	terminating '}' grouping character. Change '[0-9][0-9]'
+	to '0' as we've already matched it.
+
 2001-08-05  Gary V. Vaughan  <gary@gnu.org>
 
 	From Brad <brad@comstyle.com>:
