--- a/NEWS
+++ b/NEWS
@@ -2,11 +2,13 @@ NEWS - list of user-visible changes between releases of GNU Libtool
 
 New in 1.4d: 2001-??-??; CVS version 1.4c, Libtool team:
 * Help strings display correctly again.
+* Better error messages when library linking fails.
 * Support /lib/w32api in recent cygwin releases.
 * Support cross compilation to mingw.
 * Improved support for linking with gcc on aix4* and aix5*.
 * Improved support for GCC 3.0.
 * Initial support for QNX RTOS, UnixWare 7 and OpenUNIX 8.
+* Bug fixes to the OpenBSD port.
 * Bug fixes.
 
 New in 1.4b: 2001-07-09; CVS version 1.4a, Libtool team:
